--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,18 @@
   "name": "Harmonie Gestion",
   "theme_color":  "#f2eee8",
   "background_color": "#f2eee8",
-  "categories": ["business", "finance"]
+  "icons": [
+    {
+      "src": "/android-chrome-192x192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/android-chrome-512x512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ],
+  "categories": ["business", "finance"],
+  "display": "standalone"
 }
